# advent_of_code

./: Cargo.toml
src/: day2p2.rs  day2p2_optimized.rs  day3p2.rs  lib.rs
src/utils/: matrix.rs  mod.rs  string.rs  vec2.rs
