[package]
name = "advent_of_code"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
thiserror = "2"

# [[example]]
# name = "day0"
# path = "src/day0p1.rs"

[[example]]
name = "day1p1"
path = "src/day1p1.rs"

[[example]]
name = "day1p2"
path = "src/day1p2.rs"

[[example]]
name = "day2p1"
path = "src/day2p1.rs"

[[example]]
name = "day2p2"
path = "src/day2p2.rs"

[[example]]
name = "day2p2 optimized"
path = "src/day2p2_optimized.rs"
