[package]
name = "advent_of_code"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
thiserror = "2"
regex = "1"
smart-default = "0.7"
lazy_static = "1"
itertools = "0.13.0"
anyhow = "1"
log = "0.4"
tracing-subscriber = "0.3"
glam = "0.29"
